Bug 379028 - Settings "Highlight List" doesn't enable "Apply"
Summary: Settings "Highlight List" doesn't enable "Apply"
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.5.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-21 07:47 UTC by reisenweber
Modified: 2017-04-22 07:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description reisenweber 2017-04-21 07:47:38 UTC
On changing sort order or "[_] RegEx" property in/of Highlight List items, the Aplly button doesn't get enabled
Comment 1 Peter Simonsson 2017-04-22 07:37:22 UTC
Git commit 4721367d02c957ce8fdde0df9063d09673189fcd by Peter Simonsson.
Committed on 22/04/2017 at 07:35.
Pushed by psn into branch '1.7'.

Fix modified handling in the highlight treewidget

The highlight config didn't emit the modified signal when items
were moved or modified in the treewidget.

M  +1    -0    src/CMakeLists.txt
M  +2    -0    src/config/highlight_config.cpp
M  +11   -6    src/config/highlight_configui.ui
A  +27   -0    src/config/highlighttreewidget.cpp     [License: GPL (v2+)]
A  +31   -0    src/config/highlighttreewidget.h     [License: GPL (v2+)]

https://commits.kde.org/konversation/4721367d02c957ce8fdde0df9063d09673189fcd