Fix modified handling in the highlight treewidget

The highlight config didn't emit the modified signal when items
were moved or modified in the treewidget.

BUG:379028